## Change log

### 1.8.2
* Fix - Enabled compatibility between LSX Banners (Soliloquy) and LSX Theme

### 1.8.1
* Fix - Avoided use a return function inside the PHP function "empty" (compatibility with PHP 5.5 and lower)
* Fix - Compatibility with WPML 3.6
* Fix - Fixed Sensei redirect for lessons archive
* Feature - Starter content (new feature available in WordPress 4.7)

### 1.8.0
* Made LSX compatible (visual) with Ninja Forms
* Made LSX compatible with LSX Blog Customizer (plugin)
* Made LSX compatible (visual) with LSX Banners new feature: background videos
* Spinning preloader: added an option to enable/disable it in WP Customizer
* Customizer Colors: fixed/implemented several CSS/SASS selectors
* Main menu: made highlight items use button CTA colours
* Main menu: small caret style fix for wider menu items
* Main menu: float to right always the last menu item with dropdown
* Top menu: implemented style for WPML (plugin)
* Top menu: added the social icons as social menu at the bottom
* Breadcrumbs: small fix in visual
* Search results: small fix in visual
* Blog/archive sticker (featured): small fix in position
* Improved the mobile navigation and header display
* In excerpts (only in posts lists), allowed these tags: <blockquote>,<p>,<br>,<b>,<strong>,<i>,<u>,<ul>,<li>,<span>,<div> (all others will be removed)
* Made some fixes for W3C HTML validation
* Removed TGM (plugin) feature
* Changed the site width (WordPress variable) from 750 to 1140
* Customizer Colors: print the custom styles in <head> (moved from <body>)
* Customizer Colors: improve the performance in front-end
* Customizer Colors: implement the CSS inline using SCSS
* Code sniffers: Travis CI configured
* Code sniffers: fixed the code sniffers alerts (basic alerts)
* Badges: added two badges (Travis CI deploy; Gulp.js)
* Updated WooCommerce assets to the latest version (version 2.6.4)
* Updated FontAwesome to the latest version (version 4.6.3)