@@ -2,6 +2,7 @@
 
 ### 1.8.2
 * Fix - Enabled compatibility between LSX Banners (Soliloquy) and LSX Theme
+* Fix - Enabled compatibility between LSX Blog Customiser (categories BS carousel) and LSX Theme
 
 ### 1.8.1
 * Fix - Avoided use a return function inside the PHP function "empty" (compatibility with PHP 5.5 and lower)
